# Janus

./: .dockerignore  Dockerfile  pyproject.toml  requirements.txt  run_cmd.ps1
demo/: app_januspro.py  torch_cuda.py
docker/local_janus/: docker-compose-dev.yml  docker-compose.yml  run_cmd.ps1
