[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "janus"
version = "1.0.0"
description = "Janus"
authors = [{name = "DeepSeek-AI"}]
license = {file = "LICENSE-CODE"}
urls = {homepage = "https://github.com/deepseek-ai/Janus"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "transformers",
    "timm",
    "accelerate",
    "sentencepiece",
    "attrdict",
    "einops",
]

[project.optional-dependencies]
gradio = [
    "gradio",
    "gradio-client",
    "mdtex2html",
    "pypinyin",
    "tiktoken",
    "tqdm",
    "colorama",
    "Pygments",
    "markdown",
    "SentencePiece"
#    "SentencePiece==0.1.96"
]
lint = [
    "isort",
    "black[jupyter] >= 22.6.0",
    "pylint[spelling] >= 2.15.0",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-pyi",
    "flake8-simplify",
    "ruff",
    "pyenchant",
    "pre-commit",
]

[tool.setuptools]
packages = {find = {exclude = ["images"]}}
